# vite-lit-rust

./: .gitignore  .rsw.json  index.html  package-lock.json  package.json  vite.config.ts
src/: crateImport.ts
test-crate/: Cargo.toml
test-crate/src/: lib.rs
